# terra-obia-etl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: geonb.yaml
docs/: MERGE.md  PROJECT_HISTORY.md
models/experiments/: algorithm_hierarchy_experiments.json  algorithm_hierarchy_experiments.md
models/stand_geonb_v1/: accuracy_report.md  canopy_closure_model.joblib  cover_type_model.joblib  extended_eval.json  metadata.json
models/stand_geonb_v1_balanced/: accuracy_report.md  canopy_closure_model.joblib  cover_type_model.joblib  extended_eval.json  metadata.json
models/stand_geonb_v1_stratified/: accuracy_report.md  canopy_closure_model.joblib  cover_type_model.joblib  extended_eval.json  metadata.json
scripts/: run_algorithm_hierarchy_experiments.py  train_and_evaluate_stand_classifier.py
terra_etl/: __init__.py  cli.py  config.py  pipeline.py
terra_etl/clean/: __init__.py  csv_validate.py  forest.py  geometry.py  vector.py
terra_etl/discover/: __init__.py  scanner.py
terra_etl/export/: __init__.py
terra_etl/harmonize/: __init__.py  harmonize.py  mapping.py  overlap.py
terra_etl/ingest/: __init__.py  manifest.py  models.py  zip.py
tests/: __init__.py  test_clean_geometry.py  test_csv_validate.py  test_discover.py  test_discover_hydro.py  test_discover_province_csv.py  test_harmonize.py  test_harmonize_mapping.py  test_ingest_zip.py
tests/fixtures/: nested_shell_49523619.wkt
